--- a/DormAndMealPlanCalculator/DormAndMealPlanCalculator.csproj
+++ b/DormAndMealPlanCalculator/DormAndMealPlanCalculator.csproj
@@ -63,6 +63,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SelectionsForm.resx">
+      <DependentUpon>SelectionsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
