--- a/DormAndMealPlanCalculator/DormAndMealPlanCalculator.csproj
+++ b/DormAndMealPlanCalculator/DormAndMealPlanCalculator.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dormitory.cs" />
+    <Compile Include="MealPlan.cs" />
     <Compile Include="SelectionsForm.cs">
       <SubType>Form</SubType>
     </Compile>
